Edits after code review

--- a/src/Frontend/src/components/groups/GroupMainPage/CopyGroupModal/style.less
+++ b/src/Frontend/src/components/groups/GroupMainPage/CopyGroupModal/style.less
@@ -1,28 +1,29 @@
-.modal-text {
+.common-info {
   margin-bottom: 10px;
 }
 
-.change-owner-block {
-  margin: 15px 0 0;
-
-  p {
-	margin: 0 0 10px;
-  }
+.select-course, .select-group {
+  width: fit-content;
 }
 
 .course-info, .group-info {
-  margin: 0 0 5px;
+  margin-bottom: 5px;
 }
 
-.course-info + span {
-  margin-bottom: 15px;
+.group-info {
+  margin-top: 15px;
 }
 
-.modal-label {
-  display: block;
-}
-
-.empty-group-text {
+.empty-group-info {
   display: inline-block;
   margin-left: 10px;
+  font-weight: bold;
+}
+
+.change-owner-block {
+  margin-top: 15px;
+}
+
+.change-owner-info {
+  margin-bottom: 10px;
 }
