--- a/src/Frontend/src/pages/course/groups/groupPage.less
+++ b/src/Frontend/src/pages/course/groups/groupPage.less
@@ -83,36 +83,36 @@ h3 {
   @media (max-width: @maxTabletWidth) {
 	display: block;
   }
+}
 
-  h2 {
-	width: 80%;
-	margin: 0 auto;
-	font-weight: 500;
-	text-align: left;
-	font-size: 32px;
-	line-height: 30px;
-	border: none;
+.group-name {
+  width: 80%;
+  margin: 0 auto;
+  font-weight: 500;
+  text-align: left;
+  font-size: 32px;
+  line-height: 30px;
+  border: none;
 
-	@media (max-width: @maxTabletWidth) {
-	  padding: 0;
-	}
-
-	@media (max-width: @maxPhoneWidth) {
-	  font-size: 22px;
-	}
+  @media (max-width: @maxTabletWidth) {
+	padding: 0;
   }
 
-  .tabs-container {
-	width: 80%;
-	margin: 30px auto -1px;
+  @media (max-width: @maxPhoneWidth) {
+	font-size: 22px;
+  }
+}
 
-	a:hover {
-	  text-decoration: none;
-	  color: #333;
-	}
-	a:focus {
-	  text-decoration: none;
-	}
+.tabs-container {
+  width: 80%;
+  margin: 30px auto -1px;
+
+  a:hover {
+	text-decoration: none;
+	color: #333;
+  }
+  a:focus {
+	text-decoration: none;
   }
 }
 
