--- a/src/Frontend/src/components/groups/GroupMainPage/CreateGroupModal/style.less
+++ b/src/Frontend/src/components/groups/GroupMainPage/CreateGroupModal/style.less
@@ -1,8 +1,11 @@
-.modal-label {
-  padding-bottom: 22px;
-  margin: 0;
+.common-info {
+  margin: 20px 0 0;
 }
 
-p {
-  margin: 0;
+.good-name {
+  color: #3F9726;
+}
+
+.bad-name {
+  color: #D97E00;
 }
