--- a/src/Frontend/src/components/groups/GroupSettingsPage/GroupSettings/style.less
+++ b/src/Frontend/src/components/groups/GroupSettingsPage/GroupSettings/style.less
@@ -1,43 +1,15 @@
 @import "../../../../variables.less";
 
-button {
-  border: 0;
-  color: #404040;
-  cursor: pointer;
-  display: inline-block;
-  font-family: inherit;
-  font-size: 14px;
-  margin: 0;
-  outline: 0;
-  overflow: visible;
-  position: relative;
-  border-radius: 2px;
-  height: 32px;
-  line-height: 32px;
-  padding: 0 15px;
+label {
+  font-weight: 400;
+  width: 100%;
+
+  input {
+	max-width: 100%;
+  }
 }
 
-a {
-  text-decoration: none;
-}
-
-h2 {
-  font-weight: 500;
-  text-align: left;
-  font-size: 32px;
-  line-height: 40px;
-  margin: 0 0 10px 0;
-  padding: 30px 0;
-}
-
-h3 {
-  font-size: 22px;
-  line-height: 30px;
-  margin: 10px 0 15px 0;
-  font-weight: 500;
-}
-
-.group-settings-wrapper {
+.wrapper {
   width: 100%;
   margin: 0 0 40px 0;
 
@@ -48,66 +20,37 @@ h3 {
   }
 }
 
-.group-name-field {
+.changeName-block {
   margin-bottom: 35px;
 }
 
-.group-name-label {
+.changeName-header-block {
   display: inline-block;
   line-height: 30px;
   margin: 0 20px 0 0;
+}
 
-  h4 {
-	font-weight: 500;
-	font-size: 18px;
-	margin: 0 0 15px 0;
+.changeName-header {
+  font-weight: 500;
+  font-size: 18px;
+  margin: 0 0 15px 0;
+}
+
+.changeName-search {
+  label {
+	width: 60%;
+	min-width: 250px;
   }
 }
 
-.group-name-label + label {
-  width: 60%;
-  min-width: 250px;
-}
-
-label {
-  font-weight: 400;
-  width: 100%;
-
-  input {
-	max-width: 100%;
-  }
-}
-
-.check-block {
+.checkbox-block {
   margin-bottom: 35px;
 }
 
-.points-block {
-
-  h4 {
-	margin: 10px 0;
-  }
-
-  label{
-	margin-bottom: 10px;
-
-	label {
-	  margin-bottom: 3px;
-	}
-  }
-
-  p {
-	margin-bottom: 10px;
-  }
-
-  .points-block-comment {
-	margin: -5px 0 0 27px;
-	color: rgba(0, 0, 0, 0.5);
-  }
+.settings-header {
+  margin: 10px 0;
 }
 
-.exercise-comment {
-  p {
-	margin: 0;
-  }
+.settings-text {
+  margin-bottom: 10px;
 }
