Edits after code review. Added color variables in less.

--- a/src/Frontend/src/components/groups/GroupMainPage/GroupInfo/style.less
+++ b/src/Frontend/src/components/groups/GroupMainPage/GroupInfo/style.less
@@ -54,14 +54,8 @@
 
 .group-name {
   font-size: 18px;
-  color: #337ab7;
+  color: @linkColor;
   margin-bottom: 7px;
-}
-
-.teachers-list,
-.students-count {
-  color: #333;
-  opacity: 80%;
 }
 
 .group-settings {
@@ -74,11 +68,11 @@
 }
 
 .settings-on{
-  color: #3F9726;
+  color: @successColor;
 }
 
 .settings-off {
-  color: #D97E00;
+  color: @accentColor;
 }
 
 .group-action {
