--- a/src/Frontend/src/components/groups/GroupSettingsPage/GroupMembers/InviteBlock/style.less
+++ b/src/Frontend/src/components/groups/GroupSettingsPage/GroupMembers/InviteBlock/style.less
@@ -9,7 +9,7 @@
   margin-left: 7px;
 }
 
-.inviteLink-block {
+.invite-link {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -18,7 +18,7 @@
   cursor: pointer;
 }
 
-.inviteLink-text {
+.invite-link-text {
   display: inline-block;
   margin-right: 10px;
 
@@ -29,7 +29,7 @@
   }
 }
 
-.inviteLink-input {
+.invite-link-input {
   display: inline-block;
   width: 100%;
 
