--- a/src/Frontend/src/components/groups/GroupSettingsPage/GroupMembers/style.less
+++ b/src/Frontend/src/components/groups/GroupSettingsPage/GroupMembers/style.less
@@ -2,7 +2,7 @@
 
 .wrapper {
   width: 100%;
-  margin: 0 0 40px 0;
+  margin-bottom: 40px;
 }
 
 .teachers {
@@ -14,7 +14,7 @@
 }
 
 .teachers-info {
-	margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .teacher-block {
@@ -30,7 +30,7 @@
 }
 
 .teacher-status {
-  color: #737373;
+  color: @additionalColor;
 
   @media (max-width: @maxPhoneWidth) {
 	display: none;
@@ -44,25 +44,3 @@
 .students-header {
 	margin: 0 0 15px 0;
 }
-
-.big {
-  font-size: 30px;
-  font-weight: 500;
-  min-width: 55px;
-  height: 55px;
-}
-
-.small {
-  font-size: 16px;
-  min-width: 20px;
-  height: 20px;
-  font-weight: 700;
-  padding: 0;
-  margin-right: 10px;
-}
-
-
-
-
-
-
