--- a/src/Frontend/src/components/groups/GroupSettingsPage/GroupSettings/style.less
+++ b/src/Frontend/src/components/groups/GroupSettingsPage/GroupSettings/style.less
@@ -20,23 +20,23 @@ label {
   }
 }
 
-.changeName-block {
+.change-name {
   margin-bottom: 35px;
 }
 
-.changeName-header-block {
+.change-name-header {
   display: inline-block;
   line-height: 30px;
   margin: 0 20px 0 0;
 }
 
-.changeName-header {
+.change-name-label {
   font-weight: 500;
   font-size: 18px;
   margin: 0 0 15px 0;
 }
 
-.changeName-search {
+.change-name-input {
   label {
 	width: 60%;
 	min-width: 250px;
