--- a/src/Frontend/src/variables.less
+++ b/src/Frontend/src/variables.less
@@ -1,3 +1,10 @@
 @maxLaptopWidth: 1200px;
 @maxTabletWidth: 900px;
 @maxPhoneWidth: 767px;
+
+@additionalColor: #808080;
+@disabledColor: #A0A0A0;
+@linkColor: #3072C4;
+@negativeColor: #CE0014;
+@successColor: #228007;
+@accentColor: #D97E00;
