--- a/src/Frontend/src/components/groups/GroupMainPage/CreateGroupModal/style.less
+++ b/src/Frontend/src/components/groups/GroupMainPage/CreateGroupModal/style.less
@@ -1,11 +1,13 @@
+@import "../../../../variables.less";
+
 .common-info {
   margin: 20px 0 0;
 }
 
 .good-name {
-  color: #3F9726;
+  color: @successColor;
 }
 
 .bad-name {
-  color: #D97E00;
+  color: @accentColor;
 }
