--- a/src/Frontend/src/components/groups/GroupSettingsPage/GroupMembers/Avatar/style.less
+++ b/src/Frontend/src/components/groups/GroupSettingsPage/GroupMembers/Avatar/style.less
@@ -8,3 +8,19 @@
   text-align: center;
   padding: 5px 0;
 }
+
+.big {
+  font-size: 30px;
+  font-weight: 500;
+  min-width: 55px;
+  height: 55px;
+}
+
+.small {
+  font-size: 16px;
+  min-width: 20px;
+  height: 20px;
+  font-weight: 700;
+  padding: 0;
+  margin-right: 10px;
+}
