--- a/src/Frontend/src/components/groups/GroupSettingsPage/GroupMembers/GroupStudents/style.less
+++ b/src/Frontend/src/components/groups/GroupSettingsPage/GroupMembers/GroupStudents/style.less
@@ -5,12 +5,11 @@
   justify-content: flex-start;
   flex-direction: row;
   align-items: center;
-  margin: 0 0 10px 0;
+  margin-bottom: 5px;
+}
 
-  label {
-	width: auto;
-	margin: 0 30px 0 0;
-  }
+.action-buttons {
+  margin: 0 0 5px 30px;
 }
 
 .action {
