Added logic for render some of teachers.

--- a/src/Frontend/src/components/groups/GroupMainPage/GroupInfo/style.less
+++ b/src/Frontend/src/components/groups/GroupMainPage/GroupInfo/style.less
@@ -56,12 +56,23 @@
   font-size: 18px;
   color: #337ab7;
   margin-bottom: 7px;
+  opacity: 0.99;
+  z-index: 1;
+
+  &:hover {
+	text-decoration: underline;
+  }
 }
 
 .teachers-list,
 .students-count {
   color: #333;
   opacity: 80%;
+}
+
+.link-to-group-members {
+  opacity: 0.99;
+  z-index: 1;
 }
 
 .group-settings {
