Small fix with exclamation mark

--- a/src/uLearn.Web/Views/Course/SlideHtml.cshtml
+++ b/src/uLearn.Web/Views/Course/SlideHtml.cshtml
@@ -220,7 +220,7 @@
 	var googleDocLink = context.Course.Settings.VideoAnnotationsGoogleDoc;
 	if (!string.IsNullOrEmpty(googleDocLink))
 	{
-		<div>Ошибка в содержании? <a href="https://docs.google.com/document/d/@googleDocLink">Предложите исправление!</a></div>
+		<div>Ошибка в содержании? <a href="https://docs.google.com/document/d/@googleDocLink">Предложите исправление</a>!</div>
 	}
 }
 
