Fix Ulearn.Web reference to Microsoft.AspNetCore.Mvc.Core

--- a/src/uLearn.Web/Views/Course/SlideHtml.cshtml
+++ b/src/uLearn.Web/Views/Course/SlideHtml.cshtml
@@ -187,11 +187,7 @@
 		var client = UlearnVideoAnnotationsClient.Instance;
 		try
 		{
-			var annotationsResponse = client.GetAnnotationsAsync(new AnnotationsParameters
-			{
-				GoogleDocId = context.Course.Settings.VideoAnnotationsGoogleDoc,
-				VideoId = block.VideoId
-			}).GetAwaiter().GetResult();
+			var annotationsResponse = client.GetAnnotationsAsync(context.Course.Settings.VideoAnnotationsGoogleDoc, block.VideoId).GetAwaiter().GetResult();
 
 			@ShowVideoAnnotations(annotationsResponse.Annotation, context, Html);
 		}
