Add popover about plagiarism fast-track
Set 0 points, add comment and prohibit further review

--- a/src/uLearn.Web/Content/antiplagiarism.css
+++ b/src/uLearn.Web/Content/antiplagiarism.css
@@ -143,3 +143,11 @@
 .antiplagiarism .antiplagiarism__not-matched {
     cursor: pointer;
 }
+
+.antiplagiarism-status__popover {
+	
+}
+
+.antiplagiarism-status__popover button {
+	margin-top: 5px;	
+}
