--- a/src/uLearn.Web/Views/Exercise/Submission.cshtml
+++ b/src/uLearn.Web/Views/Exercise/Submission.cshtml
@@ -116,14 +116,15 @@
 		{
 			<p class="antiplagiarism-status"
                data-antiplagiarism-url="@Url.Action("Info", "AntiPlagiarism", new { courseId = Model.CourseId, submissionId = currentSubmissionId })"
-               data-antiplagiarism-details-url="@Url.Action("Details", "AntiPlagiarism", new { courseId = Model.CourseId, submissionId = currentSubmissionId })">
+				data-antiplagiarism-details-url="@Url.Action("Details", "AntiPlagiarism", new { courseId = Model.CourseId, submissionId = currentSubmissionId })"
+				data-add-exercise-code-review-url="@Url.Action("AddExerciseCodeReview", "Exercise", new { courseId = Model.CourseId, checkingId = Model.ManualChecking.Id })">
                 Проверка на&nbsp;списывание: ищу похожие решения у&nbsp;других студентов...
             </p>
 		}
 
 		if (Model.ReviewState == ExerciseReviewState.Reviewed || Model.InstructorView || Model.Reviews.Any())
 		{
-			var showOnlyAutomaticalReviews = Model.ReviewState != ExerciseReviewState.Reviewed && !Model.InstructorView;
+			var showOnlyAutomaticReviews = Model.ReviewState != ExerciseReviewState.Reviewed && !Model.InstructorView;
 			/* For reviewed submission without reviews don't show reviews panel at all */
 			var isEmpty = Model.Reviews.Count == 0 && !canAddReviews ? "empty" : "";
 			<div class="exercise__reviews @isEmpty">
@@ -144,7 +145,7 @@
 						}
 					}
 
-					if (showOnlyAutomaticalReviews && !review.Author.IsUlearnBot())
+					if (showOnlyAutomaticReviews && !review.Author.IsUlearnBot())
 					{
 						continue;
 					}
@@ -155,7 +156,7 @@
 						ManualChecking = Model.ManualChecking,
 						CurrentUser = Model.CurrentUser,
 						CanReply = canReply,
-						ShowOnlyAutomaticalReviews = showOnlyAutomaticalReviews,
+						ShowOnlyAutomaticalReviews = showOnlyAutomaticReviews,
 					})
 				}
 			</div>
