--- a/src/Frontend/src/components/groups/GroupMainPage/CopyGroupModal/style.less
+++ b/src/Frontend/src/components/groups/GroupMainPage/CopyGroupModal/style.less
@@ -1,3 +1,5 @@
+@import "./../../../../variables.less";
+
 .common-info {
   margin-bottom: 10px;
 }
@@ -17,7 +19,8 @@
 .empty-group-info {
   display: inline-block;
   margin-left: 10px;
-  font-weight: bold;
+  font-weight: 500;
+  color: @negativeColor;
 }
 
 .change-owner-block {
