--- a/src/Frontend/src/components/groups/GroupMainPage/GroupInfo/style.less
+++ b/src/Frontend/src/components/groups/GroupMainPage/GroupInfo/style.less
@@ -14,7 +14,7 @@
   cursor: pointer;
 
   &:hover {
-	background-image: linear-gradient(rgba(255,255,255,1),rgba(229,229,229,0.3));
+	background-color: rgba(0,0,0,.02);
   }
 }
 
