--- a/src/Frontend/src/components/groups/GroupSettingsPage/GroupMembers/CopyStudentsModal/style.less
+++ b/src/Frontend/src/components/groups/GroupSettingsPage/GroupMembers/CopyStudentsModal/style.less
@@ -1,3 +1,5 @@
+@import "./../../../../../variables.less";
+
 .common-info {
   margin-bottom: 10px;
 }
@@ -17,5 +19,6 @@
 .empty-group-info {
   display: inline-block;
   margin-left: 10px;
-  font-weight: bold;
+  font-weight: 500;
+  color: @negativeColor;
 }
