Use Common.Api in Antiplagiarism client and models
+ use VideoAnnotationClient directly in Ulearn.Web
+ adjust margins for video annotations suggest

--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -702,6 +702,10 @@
 	margin: 20px 0;
 }	
 
+.legacy-page .suggest-video-annotations {
+	margin-bottom: 25px;
+}
+
 .legacy-page .unit-statistic-ref {
 	color: yellowgreen;
 }
