Edits after code review

--- a/src/Frontend/src/components/common/Header.less
+++ b/src/Frontend/src/components/common/Header.less
@@ -1,5 +1,4 @@
 @import "../../variables.less";
-@import "../../common.less";
 
 @headerHeight: 50px;
 
@@ -261,3 +260,20 @@
   border-left: 4px solid transparent;
 }
 
+.visible-only-phone {
+   display: none;
+
+   @media (max-width: @maxPhoneWidth) {
+	 & {
+	   display: initial;
+	 }
+   }
+ }
+
+.visible-at-least-tablet {
+  @media (max-width: @maxPhoneWidth) {
+	& {
+	  display: none !important;
+	}
+  }
+}
