Added link from GroupPage to GroupListPage

--- a/src/Frontend/src/components/groups/GroupMainPage/GroupHeader/style.less
+++ b/src/Frontend/src/components/groups/GroupMainPage/GroupHeader/style.less
@@ -33,6 +33,7 @@
   line-height: 30px;
   border: none;
   margin: 0;
+  align-self: center;
 
   @media (max-width: @maxPhoneWidth) {
 	font-size: 22px;
@@ -52,7 +53,7 @@
 
 .tabs-container {
   width: 80%;
-  margin: 30px auto -1px;
+  margin: 35px auto -1px;
 
   @media (max-width: @maxTabletWidth) {
 	width: 100%;
