--- a/src/Frontend/src/pages/course/groups/groupPage.less
+++ b/src/Frontend/src/pages/course/groups/groupPage.less
@@ -9,15 +9,24 @@
   padding: 30px 0 0;
 }
 
-.group-name {
+.link-to-prev-page-block {
   width: 80%;
   margin: 0 auto;
+}
+
+.link-to-prev-page {
+  font-size: 18px;
+  width: fit-content;
+}
+
+.group-name {
+  width: 80%;
+  margin: 30px auto 20px;
   font-weight: 500;
   text-align: left;
   font-size: 32px;
   line-height: 30px;
   border: none;
-  padding: 30px 0;
 
   @media (max-width: @maxTabletWidth) {
 	padding: 0;
