Cleanup for groups page
Redirect from /Admin/Groups to /:courseId/groups on frontend and backend
Change url in header
Fix link color
CourseId should be case-insensetive In url /:courseId/groups (i.e. /BasicProgramming/groups)
Fix bug with passing arguments to GroupListPage.loadArchivedGroups() and .loadActiveGroups()
Remove first slash in url in api/users.js
Return index.html for any 404 response from legacy backend
Fix bug in API: return only groups for requested course

--- a/src/Frontend/src/components/groups/GroupMainPage/GroupInfo/style.less
+++ b/src/Frontend/src/components/groups/GroupMainPage/GroupInfo/style.less
@@ -50,6 +50,10 @@
   @media (max-width: @maxTabletWidth) {
 	width: 100%;
   }
+
+  a {
+    text-decoration-color: #3072c4;
+  }
 }
 
 .group-name {
