Fixed exercise score form

--- a/src/uLearn.Web/Views/Exercise/_ExerciseScoreForm.cshtml
+++ b/src/uLearn.Web/Views/Exercise/_ExerciseScoreForm.cshtml
@@ -31,7 +31,7 @@
 	</div>
 </div>
 
-<div class="row">
+<div class="row exercise__score-form-wrapper">
 	<div class="col-xs-12">
 		<form method="POST" action="@Url.Action("ScoreExercise", "Exercise", new { recheck = Model.Checking.IsChecked })"
 			class="exercise__score-form" data-submission-id="@Model.Checking.Submission.Id"
