--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -2480,6 +2480,28 @@ h1 .copy-group-link {
 	margin-bottom: 10px;
 }
 
+.legacy-page .exercise__score-form-wrapper.fixed {
+	background: white;
+	bottom: 0;
+	position: fixed;
+	z-index: 10;
+	padding-top: 10px;
+	box-shadow: 0px -4px 4px -4px rgba(0, 0, 0, 0.48);
+	width: 1214px;
+	margin-left: -20px;
+	padding-left: 5px;
+}
+
+@media (max-width: 768px) {
+	.legacy-page .exercise__score-form-wrapper {
+		padding-left: 15px !important;	
+	}
+	
+	.legacy-page .exercise__score-form-wrapper.fixed {
+		width: 100%;
+	}
+}
+
 .legacy-page .manual-checkings-left {
 	display: block;
 	margin-left: 189px;
