Adjust margins for video annotations suggest block

--- a/src/uLearn.Web/Views/Course/SlideHtml.cshtml
+++ b/src/uLearn.Web/Views/Course/SlideHtml.cshtml
@@ -221,7 +221,7 @@
 	var googleDocLink = context.Course.Settings.VideoAnnotationsGoogleDoc;
 	if (!string.IsNullOrEmpty(googleDocLink))
 	{
-		<div>Ошибка в содержании? <a href="https://docs.google.com/document/d/@googleDocLink" target="_blank">Предложите исправление</a><span class="link-text">!</span></div>
+		<div class="suggest-video-annotations">Ошибка в содержании? <a href="https://docs.google.com/document/d/@googleDocLink" target="_blank">Предложите исправление</a><span class="link-text">!</span></div>
 	}
 }
 
