--- a/src/uLearn.Web/Views/Home/Index.cshtml
+++ b/src/uLearn.Web/Views/Home/Index.cshtml
@@ -24,6 +24,13 @@
 				</p>
 				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "BasicProgramming" }, new { @class = "btn btn-primary" })</p>
 			</div>
+			<div class="course-tile col-md-6 banner">
+				<a href="https://kontur.ru/education/programs/intern/2019?utm_source=referal&utm_medium=banner&utm_campaign=ulearn">
+					<img src="~/Content/banner-summer-practice.jpg" width="100%"/>
+				</a>
+			</div>
+		</div>
+		<div class="row">
 			<div class="course-tile col-md-6">
 				<h2>Основы программирования на примере C#. Часть 2</h2>
 				<p>Длительность курса: 1 семестр, 3–6 часов в неделю.</p>
@@ -38,6 +45,15 @@
 					Рассчитан на людей, знакомых с основами синтаксиса C#.
 				</p>
 				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "BasicProgramming2" }, new { @class = "btn btn-primary" })</p>
+			</div>
+			<div class="course-tile col-md-6">
+				<h2>Основы компьютерной безопасности</h2>
+				<p>Длительность: 1 семестр, 2–6 часов в неделю</p>
+				<p>
+					Курс разработан для студентов первого и второго года обучения компьютерных специальностей ИМКН УрФУ.
+					Рассчитан на людей с минимальным опытом программирования.
+				</p>
+				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "Hackerdom" }, new { @class = "btn btn-primary" })</p>
 			</div>
 		</div>
 		<div class="row">
@@ -57,13 +73,17 @@
 				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "CS2" }, new { @class = "btn btn-primary" })</p>
 			</div>
 			<div class="course-tile col-md-6">
-				<h2>Основы компьютерной безопасности</h2>
-				<p>Длительность: 1 семестр, 2–6 часов в неделю</p>
+				<h2>
+					Тестирование&nbsp;ПО
+				</h2>
 				<p>
-					Курс разработан для студентов первого и второго года обучения компьютерных специальностей ИМКН УрФУ.
-					Рассчитан на людей с минимальным опытом программирования.
+					Курс дает базовые знания о&nbsp;тестировании программного обеспечения,
+					знакомит с&nbsp;процессом разработки, инструментами и&nbsp;теорией тестирования.
 				</p>
-				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "Hackerdom" }, new { @class = "btn btn-primary" })</p>
+				<p>
+					Длительность: 1 месяц, 3&ndash;4 часа в неделю
+				</p>
+				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "Testing" }, new { @class = "btn btn-primary" })</p>
 			</div>
 		</div>
 		<div class="row">
@@ -88,36 +108,6 @@
 				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "Linq" }, new { @class = "btn btn-primary" })</p>
 			</div>
 			<div class="course-tile col-md-6">
-				<h2>
-					Тестирование&nbsp;ПО
-				</h2>
-				<p>
-					Курс дает базовые знания о&nbsp;тестировании программного обеспечения,
-					знакомит с&nbsp;процессом разработки, инструментами и&nbsp;теорией тестирования.
-				</p>
-				<p>
-					Длительность: 1 месяц, 3&ndash;4 часа в неделю
-				</p>
-				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "Testing" }, new { @class = "btn btn-primary" })</p>
-			</div>
-		</div>
-		<div class="row">
-			<div class="course-tile col-md-6">
-				<h2>Оценка сложности алгоритмов</h2>
-				<p>
-				Длительность миникурса: 2 часа.
-				<p>
-					Короткий курс-практикум, развивающий навык быстрой оценки сложности
-					алгоримов и кода, который ежедневно пишут программисты.
-				</p>
-				<p>
-					Курс содержит самый минимум теории и построен вокруг серии хорошо
-					подобранных задач, демонстрирующих самые распространённые
-					и типовые случаи, в которых навык оценки сложности оказывается полезным.
-				</p>
-				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "complexity" }, new { @class = "btn btn-primary" })</p>
-			</div>
-			<div class="course-tile col-md-6">
 				<h2>Искусственный интеллект и машинное обучение</h2>
 				<p>Длительность: 1 семестр, 1-2 часа в неделю</p>
 				<p>
@@ -137,6 +127,23 @@
 				</p>
 				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "Networks" }, new { @class = "btn btn-primary" })</p>
 			</div>
+			<div class="course-tile col-md-6">
+				<h2>Оценка сложности алгоритмов</h2>
+				<p>
+				Длительность миникурса: 2 часа.
+				<p>
+					Короткий курс-практикум, развивающий навык быстрой оценки сложности
+					алгоримов и кода, который ежедневно пишут программисты.
+				</p>
+				<p>
+					Курс содержит самый минимум теории и построен вокруг серии хорошо
+					подобранных задач, демонстрирующих самые распространённые
+					и типовые случаи, в которых навык оценки сложности оказывается полезным.
+				</p>
+				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "complexity" }, new { @class = "btn btn-primary" })</p>
+			</div>
+		</div>
+		<div class="row">
 			<div class="course-tile col-md-6">
 				<h2>The Clean Code Game</h2>
 				<p>Длительность: 10–20 минут</p>
