Fix antiplagiarism shame tooltip appearance

--- a/src/uLearn.Web/Content/antiplagiarism.css
+++ b/src/uLearn.Web/Content/antiplagiarism.css
@@ -30,6 +30,10 @@
     }
 }
 
+.legacy-page .antiplagiarism-status .tooltip {
+	z-index: 4;
+}
+
 .antiplagiarism-status b {
     font-weight: 600;
 }
