--- a/src/Frontend/src/components/groups/GroupSettingsPage/GroupMembers/InviteBlock/style.less
+++ b/src/Frontend/src/components/groups/GroupSettingsPage/GroupMembers/InviteBlock/style.less
@@ -13,7 +13,7 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  align-items: center;
+  align-items: baseline;
   margin: 5px 0 10px;
   cursor: pointer;
 }
