--- a/src/uLearn.Web/Views/Account/Profile.cshtml
+++ b/src/uLearn.Web/Views/Account/Profile.cshtml
@@ -1,6 +1,9 @@
-﻿@using uLearn.Web.Kontur.Passport
+﻿@using Database.Extensions
+@using uLearn.Web.Extensions
+@using uLearn.Web.Kontur.Passport
 @using uLearn.Web.Microsoft.Owin.Security.VK
 @using uLearn.Web.Views.Shared
+@using Ulearn.Common
 @model uLearn.Web.Controllers.ProfileModel
 
 @{
